--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>PAGE_TEST</title>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <link href="styles/defaultstyle.css" rel="stylesheet" type="text/css">
         <meta name="robots" content="noindex">
     </head>
