--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <head>
         <title>PAGE_TEST</title>
         <meta charset="utf-8">
-        <link href="styles/defaultstyle.css" rel="stylesheet" type="text/css">
+        <link href="./styles/frontpage.css" rel="stylesheet" type="text/css">
         <meta name="robots" content="noindex">
     </head>
     <body>
         <h1>Test<ins>-</ins>Page<sub>Index</sub></h1>
         <h3>이 페이지는 제작자 본인이 사용하기 위해 만들어진 페이지입니다.</h3>
+        <hr>
+        <div><form action='./login.php'>P:<input id='pwd'  required type="password" maxlength='20' placeholder='input password here' class="inputbox"><br><input type='submit' value="Sign In"></form></div>
     </body>
 </html>
 
