--- a/main.html
+++ b/main.html
@@ -9,6 +9,13 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        Login Success
+        <h1>Test<ins>-</ins>Page<sub>Index</sub></h1>
+        <h3>이 페이지는 제작자 본인이 사용하기 위해 만들어진 페이지입니다.</h3>
+        <hr>
+        <div><a href="URL"target="./Funcs/Online_storage.html">Online storage</a><br><hr>
+        <a href="URL"target="./Funcs/html5_Fplayer.html">Fplayer</a><br><hr>
+        <a href="URL"target="./logout.php">Sign Out</a><hr><br><br>
+        </div>
+        
     </body>
 
