--- a/ereturn/403.html
+++ b/ereturn/403.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>403</title>
     <style>
+    html{
+      background-color:black;
+      color:#555555;
+    }
     h1{
         font-family:sans-serif;
         font-size:20px;
